fixed body overflow

--- a/src/styles/scss/reset.scss
+++ b/src/styles/scss/reset.scss
@@ -9,6 +9,7 @@ body {
   overflow-x: hidden;
 }
 .body--active {
+  overflow-x: hidden;
   overflow-y: hidden;
 }
 
